# CMH

./: .gitmodules  README.md  TO-DO.md  main.py
.config/: local-config.json  local_configuration.toml  local_configuration.yml
.gbs/: support.yml
MyProject/: project_root.xml
core/: CMakeLists.txt  my_build.sh  out
core/include/: ConfigValidator.h  IConfigValidator.h  IParser.h  IProjectBuilder.h  IProjectWriterHandler.h  ISupportParser.h  IYMLConfigParser.h  Parser.h  ProjectBuilder.h  ProjectWriterHandler.h  SupportParser.h  YMLConfigParser.h  cmh.h  cmh_API.h  cmh_Contants.h  cmh_info.h  help.h  jsonParser.h  parser.h  parser_original.h  systemConfig.h  system_configuration.h  tomlParser.h
core/src/: ConfigValidator.cpp  Parser.cpp  ProjectBuilder.cpp  ProjectWriterHandler.cpp  SOLID.cpp  SupportParser.cpp  YMLConfigParser.cpp  cmh.cpp  jsonParser.cpp  parser.cpp  parser_idea copy.cpp  parser_idea.cpp  systemConfig.cpp  tomlParser.cpp
core/test/pocjson/: CMakeLists.txt  ParserTest.cpp  cmhTest.cpp  main.cpp  project_manifest.json  project_topology.json
core/test/pocxml/: main.cpp  project_root.xml
core/utility/: path.h
test/pocSupportParser/: CMakeLists.txt  global-conf.yml  my_build.sh  support.yml  ymlSupportParser.cpp
test/pocjson/: CMakeLists.txt  ParserImpl.cpp  ParserTest.cpp  cmhTest.cpp  config.cpp  local_configuration.yml  my_build.sh  project.json  project_manifest.json  project_topology.json
test/pocxml/: CMakeLists.txt
test/pocymlconfig/: CMakeLists.txt  ymlParserImpl.cpp
